argocd/charts/helm-dashboard/rsrc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-dashboard-ingress
  namespace: helm-dashboard
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2-proxy.home.planetlauritsen.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.home.planetlauritsen.com/oauth2/start?rd=https://$host$request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - helm-dashboard.home.planetlauritsen.com
      secretName: helm-dashboard-tls # pragma: allowlist secret
  rules:
    - host: helm-dashboard.home.planetlauritsen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helm-dashboard
                port:
                  number: 8080
